--- a/package.json
+++ b/package.json
@@ -4,15 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently npm:dev:*",
+    "dev:server": "tsc -w",
+    "dev:server-watch": "nodemon ./dist/server/index.js",
+    "dev:client": "webpack-dev-server --config ./config/development/webpack.dev.js",
+    "build": "concurrently npm:build:*",
+    "build:server": "",
+    "build:client": "webpack --config ./config/production/webpack.product.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/koa": "^2.11.3",
+    "@types/koa-router": "^7.4.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.8",
+    "ant-design": "^1.0.0",
+    "concurrently": "^5.2.0",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "reactdom": "^2.0.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack-merge": "^4.2.2"
   }
 }
