--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently npm:dev:*",
     "dev:server": "tsc -w",
-    "dev:server-watch": "nodemon ./dist/server/index.js",
+    "dev:server-watch": "nodemon /dist/server/index.js",
     "dev:client": "webpack-dev-server --config ./config/development/webpack.dev.js",
     "build": "concurrently npm:build:*",
     "build:server": "",
@@ -30,13 +30,15 @@
     "react-redux": "^7.2.0",
     "reactdom": "^2.0.0",
     "redux-thunk": "^2.3.0",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
