--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.8",
     "ant-design": "^1.0.0",
+    "antd": "^4.2.3",
     "concurrently": "^5.2.0",
     "koa": "^2.11.0",
     "koa-router": "^8.0.8",
