feat: second commit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently npm:dev:*",
     "dev:server": "tsc -w",
-    "dev:server-watch": "nodemon /dist/server/index.js",
+    "dev:server-watch": "nodemon ./dist/server/index.js",
     "dev:client": "webpack-dev-server --config ./config/development/webpack.dev.js",
     "build": "concurrently npm:build:*",
     "build:server": "",
@@ -16,21 +16,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.31",
     "@types/koa": "^2.11.3",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
+    "@types/lodash": "^4.14.151",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.8",
+    "@types/require-directory": "^2.1.1",
+    "@types/validator": "^13.0.0",
     "ant-design": "^1.0.0",
     "antd": "^4.2.3",
+    "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
+    "lodash": "^4.17.15",
+    "mysql2": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "reactdom": "^2.0.0",
     "redux-thunk": "^2.3.0",
+    "require-directory": "^2.1.1",
+    "sequelize": "^5.21.9",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.2",
     "webpack": "^4.43.0",
