--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "antd": "^4.2.3",
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
+    "echarts-gl": "^1.1.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
@@ -54,7 +57,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
+    "less": "^3.11.3",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.2.1",
     "webpack-merge": "^4.2.2"
   }
 }
