--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,20 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
+        "modules": false,
         "targets": {
-          "browsers": [
-            "> 1%",
-            "last 5 versions",
-            "ie >= 8"
-          ]
-        }
+          "edge": 17,
+          "firefox": 60,
+          "chrome": 67,
+          "safari": 11
+        },
+        "useBuiltIns": "usage",
+        "corejs": "^2"
       }
     ],
-    "react"
-  ]
+    "@babel/preset-react"
+  ],
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
 }
