--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=dev concurrently npm:dev:*",
-    "dev:server": "tsc -w",
+    "dev:server": "tsc -w ./server",
     "dev:server-watch": "nodemon ./dist/server/index.js",
     "dev:client": "webpack-dev-server --config ./config/development/webpack.dev.js",
     "build": "concurrently npm:build:*",
-    "build:server": "",
+    "build:server": "tsc -p ./server",
     "build:client": "webpack --config ./config/production/webpack.product.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@types/bluebird": "^3.5.31",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
@@ -29,10 +31,12 @@
     "ant-design": "^1.0.0",
     "antd": "^4.2.3",
     "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
     "echarts-gl": "^1.1.1",
+    "ip": "^1.1.5",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
@@ -44,17 +48,18 @@
     "reactdom": "^2.0.0",
     "redux-thunk": "^2.3.0",
     "require-directory": "^2.1.1",
+    "rxjs": "^6.6.0",
     "sequelize": "^5.21.9",
     "ts-loader": "^7.0.4",
-    "typescript": "^3.9.2",
+    "typescript": "^3.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.10.4",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
