--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev concurrently npm:dev:*",
-    "dev:server": "tsc -w ./server",
-    "dev:server-watch": "nodemon ./dist/server/index.js",
-    "dev:client": "webpack-dev-server --config ./config/development/webpack.dev.js",
-    "build": "concurrently npm:build:*",
+    "dev": "export NODE_ENV=development && concurrently npm:dev:*",
+    "dev:server-tsc": "tsc -w -p ./server",
+    "dev:server-watch": "nodemon --config nodemon.json",
+    "dev:client": "webpack-dev-server --config ./config/webpack/webpack.dev.js",
+    "build": "export NODE_ENV=production && concurrently npm:build:*",
     "build:server": "tsc -p ./server",
-    "build:client": "webpack --config ./config/production/webpack.product.js"
+    "build:client": "webpack --config ./config/webpack/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -60,6 +60,7 @@
     "@babel/core": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.4",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
